objects/Error_Log__c.object
<CustomObject>
    <label>Error Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Error Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Log_Date__c</fullName>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Deatils__c</fullName>
        <label>Log Deatils</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>